--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@ welcome back to my channel<br>
 today we’re going to be doing something a l i t t le diff e re n t<br>
 her voice fades into ukulele stock music<br>
 does it stick to your hands or get caught in the riptide?<br>
-lately i've been so lonely<br>
-
+lately i've been lonely<br>
+but aparently everyone else is lonely too so<br>
+that makes it fine?<br>
 fly me to the brilliant Azure Sky<br>
 where two clouds hover<br>
 indefinitely<br>
@@ -51,22 +52,25 @@ okay.<br>
 what ever happened to john green?<br>
 what ever happened to mint green?<br>
 it was never just a color<br>
-it signified something<br>
-squeeky clean<br>
-quaranteen<br>
+it smybolized squeeky clean<br>
+Tiffany<br>
+Quaranteen<br>
 I've been a bad girl<br>
 why don't you wash my mouth out<br>
 with Bath and Body Works soap<br>
 Here, if you buy three <br>
 and I buy three <br>
 we can use the<br>
-buy three <br>
-get three <br>
+BUY THREE <br>
+GET THREE <br>
 free <br>
 deal <br>
 I roam around that store for decades<br>
-frantically pacing, unscrewing bottles, and sniffing their contents<br>
-it was like a mueseam for the nose<br>
+pacing, unscrewing bottles, and sniffing their contents<br>
+I had to find the three products <br>
+and i wouldnt know which three were my favorite until i had sniffed<br>
+every bottle in the store<br>
+
 are you ready to check out?<br>
 I'd never be ready<br>
 I could spend eternity in that store<br>
@@ -112,15 +116,29 @@ skate in
 skirts<br>
 	
 you know its scary to think he said<br>
-that we're the youngest ones who remember a time before the big blue ball enveloped everything<br>
+that we're the youngest who remember a time before the big blue ball enveloped everything<br>
 but we don't remember, i said<br>
 yeah but we know its exists and we know<br>
 at one point there was a reality outside it<br>
-the ones who came after us know only of the blue ball<br>
+the ones who came after us exist within it<br>
+like its ingrained in their infant craniums<br>
+for us it was more voluntary descent<br>
+or i don't know about voluntary, we had more agency in the matter<br>
+of setting boundries in our relationship to technology given that<br>
+we saw with our own eyes the proliferation of smartphones<br>
+and tablets, the rise of instagram and snapchat, technology being<br>
+used in the classroom, like do you remembr when smart boards?
+we saw it happen 
+they didn't
+they got here
+and it already was this way
 does that make us responsible?<br>
 responsible for what?<br>
 for telling them about the big blue ball?<br>
-	
+whenever i think about bath and body works<br>
+i think about a bottle of cherry blossom lotion<br>
+that's been on a dresser in an attic in kingston new york<br>
+for upwards of 50 years<br>
 asphyxiate me<br>
 with rainbow choker necklaces<br>
 when i gasp for air<br>
@@ -144,15 +162,15 @@ its just so bright<br>
 and light<br>
 and #FFFFervescent<br>
 	
+so, to answer your original question<br>
+the first year I remember is mint green twenty fourteen<br>
+
 even if you unraveled every infinity scarf<br>
 their yarn couldn’t span the cognitive distance<br>
 between now and then<br>
 when white converse turn red<br>
 the aquamarine queen is dead<br>
 her rain is over<br>
-when will you get over it?<br>
-when will you move on?<br>
-when will you grow up?<br>
 stop saying<br>
 i want to dye<br>
 it mint green <br>
@@ -178,6 +196,30 @@ fall through<br>
 	why don't you just?<br>
 fall through<br>
 fall through<br>
+	fall through<br>fall through<br>fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>
+fall through<br>
+fall through<br>
 	fall through<br>
 fall through<br>
 fall through<br>
@@ -191,18 +233,137 @@ fall through<br>
 fall through<br>
 fall through<br>
 	fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>fall through<br>fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>fall through<br>fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>fall through<br>fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
 fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
 fall through<br>
-	fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
 fall through<br>fall through<br>
 fall through<br>fall through<br>fall through<br>
 fall through<br>fall through<br>
@@ -218,66 +379,7 @@ fall through<br>fall through<br>
 fall through<br>fall through<br>
 fall through<br>fall through<br>
 fall through<br>fall through<br>
-fall through<br>fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
-fall through<br>fall through<br>
+fall through<br>
 fall through<br>fall through<br>
 fall through<br>fall through<br>
 fall through<br>fall through<br>
