--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@ that makes it fine?<br>
 fly me to the brilliant Azure Sky<br>
 where two clouds hover<br>
 indefinitely<br>
-i never actually read The Fault In Our Stars to completion<br>
-but the cover art alone<br>
+i never actually read <br>
+The Fault In Our Stars to completion<br>
+but its cover art alone<br>
 launched me into a terminal dream of An<br>
-sel Elgort<br>
-nsterdam and prepubescent<br>
-gnst<br>
+		sel Elgort<br>
+		nsterdam and prepubescent<br>
+		gnst<br>
 okay?<br>
 okay.<br>
 what ever happened to john green?<br>
@@ -81,26 +82,24 @@ its really bad isn't it?<br>
 yeah...<br>
 
 	
-i'll try my very best
-i'll try my very best
-i'll try my very best
+i'll try my very best<br>
+i'll try my very best<br>
+i'll try my very best<br>
 		
 the listerine scene <br>
 squeeky clean
 quarantine
-
-that this thing isn't going anywhere?
-
+Ebola <br>
+happened in 2014,<br>
+right?<br>
 do you remember when things went viral<br>
 before things were viral?<br>
-when everyone knew about whatever thing it was<br>
+when everyone knew about whatever thing it was that week<br>
+the cycle still churns rapidly but within little bubbles<br>
 do you remember when every youtuber was still on vine?<br>
 are you on tumblr?<br>
 start designing your blog<br>
-and accidentally<br>
-(learn<br>
-to <br>
-code)<br>
+and learn to code by accident!
 YOU<br>
 yes, you!!! <br>
 You need <br>
@@ -114,7 +113,6 @@ girls online<br>
 didn’t you hear Malala’s speech??<br>
 skate in
 skirts<br>
-	
 you know its scary to think he said<br>
 that we're the youngest who remember a time before the big blue ball enveloped everything<br>
 but we don't remember, i said<br>
@@ -125,20 +123,21 @@ like its ingrained in their infant craniums<br>
 for us it was more voluntary descent<br>
 or i don't know about voluntary, we had more agency in the matter<br>
 of setting boundries in our relationship to technology given that<br>
-we saw with our own eyes the proliferation of smartphones<br>
-and tablets, the rise of instagram and snapchat, technology being<br>
-used in the classroom, like do you remembr when smart boards?
-we saw it happen 
-they didn't
-they got here
-and it already was this way
+we saw with our own eyes the proliferation of things like smartphones<br>
+and tablets and like the rise of social media<br>
+happened in middle school we saw it happen <br>
+they didn't<br>
+they got here<br>
+and it already was this way<br>
 does that make us responsible?<br>
 responsible for what?<br>
-for telling them about the big blue ball?<br>
+for telling them about the big blue ball insisde their bains?<br>
 whenever i think about bath and body works<br>
 i think about a bottle of cherry blossom lotion<br>
-that's been on a dresser in an attic in kingston new york<br>
+that's sat a dresser in an attic in kingston new york<br>
 for upwards of 50 years<br>
+yeah probably<br>
+what do we do<br>
 asphyxiate me<br>
 with rainbow choker necklaces<br>
 when i gasp for air<br>
