--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@ its really bad isn't it?<br>
 yeah...<br>
 
 	
-i'll try my very best<br>
-i'll try my very best<br>
+i'll try my best<br>
+i'll try my best<br>
 i'll try my very best<br>
 		
 the listerine scene <br>
@@ -110,7 +110,7 @@ Haven’t you heard that women in STEM are the future?
 That’s the thing now.<br>
 That's whats going to save us<br>
 girls online<br>
-didn’t you hear Malala’s speech??<br>
+didn’t you hear Malalala’s speech??<br>
 skate in
 skirts<br>
 you know its scary to think he said<br>
@@ -135,9 +135,8 @@ for telling them about the big blue ball insisde their bains?<br>
 whenever i think about bath and body works<br>
 i think about a bottle of cherry blossom lotion<br>
 that's sat a dresser in an attic in kingston new york<br>
-for upwards of 50 years<br>
-yeah probably<br>
-what do we do<br>
+for upwards of 30 years<br>
+yeah we're definetely responsible<br>
 asphyxiate me<br>
 with rainbow choker necklaces<br>
 when i gasp for air<br>
@@ -146,6 +145,7 @@ to drown out my begging<br>
 with hyperpop<br>
 hello?<br>
 helooooo???<br>
+the cherry blossom lotion
 	
 trample me<br>
 with white converse<br>
@@ -163,10 +163,11 @@ and #FFFFervescent<br>
 	
 so, to answer your original question<br>
 the first year I remember is mint green twenty fourteen<br>
-
+i remember a time and a place so far away<br>
 even if you unraveled every infinity scarf<br>
 their yarn couldn’t span the cognitive distance<br>
 between now and then<br>
+i remember learning to love not to remember<br>
 when white converse turn red<br>
 the aquamarine queen is dead<br>
 her rain is over<br>
@@ -183,10 +184,10 @@ when the sky gapes open<br>
 fall through<br>
 fall through<br>
 fall through<br>
-	please darling<br>
-	fall through<br>
-	fall through<br>
-	why don't you?<br>
+please darling<br>
+fall through<br>
+fall through<br>
+why don't you?<br>
 fall through<br>
 fall through<br>
 	fall through<br>
