--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ yeah he said<br>
 i do he said<br>
 i know the glowing green orb inside my skull he said<br>
 so then i was like<br>
-can i ask you a favor? <br>
-and he said sure<br>
+can i ask you a favor? and<br>
+he said sure<br>
 i need you to take my life<br>
 and dye it mint green<br>
 like Bethany Mota’s blood<br>
@@ -99,7 +99,7 @@ the cycle still churns rapidly but within little bubbles<br>
 do you remember when every youtuber was still on vine?<br>
 are you on tumblr?<br>
 start designing your blog<br>
-and learn to code by accident!
+and learn to code by accident!<br>
 YOU<br>
 yes, you!!! <br>
 You need <br>
@@ -110,9 +110,8 @@ Haven’t you heard that women in STEM are the future?
 That’s the thing now.<br>
 That's whats going to save us<br>
 girls online<br>
-didn’t you hear Malalala’s speech??<br>
-skate in
-skirts<br>
+don’t you remember Malala’s speech?<br>
+do you remember when things went flat?<br>
 you know its scary to think he said<br>
 that we're the youngest who remember a time before the big blue ball enveloped everything<br>
 but we don't remember, i said<br>
