--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			what's the first year you remember?<br> 
 			and i was like there's<br>
 			a flourescent ball of blue light that predates memory<br>
-			it radiates it hesitates<br>
+			it radiates and permeates and hesitates<br>
 			from center consule it operates<br>
 			surveilling all i do<br>
 			do you know her?<br>
@@ -72,6 +72,10 @@
 			I stare back at my friend blankly<br>
 			she turns and enters the store<br>
 			we're 13 in tysons corner<br>
+			this is back when b&bw was still across from the Annie's kiosk on the lower level<br>
+			before they relocated<br>
+			their old store felt bigger 
+			im not sure if it actually was bigger<br>
 			I roam around for decades<br>
 			pacing, unscrewing bottles, and sniffing their contents<br>
 			I had to find the three products <br>
@@ -85,6 +89,7 @@
 			oh fuck<br>
 			its really bad isn't it?<br>
 			yeah...<br>
+			
 			i'll try my best<br>
 			i'll try my best<br>
 			i'll try my very best<br>
@@ -97,7 +102,8 @@
 			do you remember when things went viral<br>
 			before things were viral?<br>
 			when everyone knew about whatever thing it was that week<br>
-			the cycle still churns rapidly but within little bubbles<br>
+			the cycle churns even more rapidly but within little bubbles<br>
+			numbers don't impress me<br>
 			do you remember when every youtuber was still on vine?<br>
 			are you on tumblr?<br>
 			start designing your blog<br>
@@ -174,6 +180,7 @@
 			when white converse turn red<br>
 			the aquamarine queen is dead<br>
 			her rain is over<br>
+			slain bloodstain and sober<br>
 			stop saying<br>
 			i want to dye<br>
 			it mint green <br>
@@ -217,6 +224,48 @@
 			fall through<br>
 			fall through<br>
 			fall through<br>			
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
 			fall through<br>
 			fall through<br>
 			fall through<br>
