--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<center>
-		<marquee><p>forever a draft -- last updated Dec 16 2021<p><marquee>
+		<marquee><p>forever a draft -- last updated Dec 16 2021</p></marquee>
 			<br>
 			<br>
   		<h1>twenty fourteen</h1> 
