--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
 	<center>
-		<marquee><p>forever a draft -- last updated Dec 16 2021</p></marquee>
+		<marquee>
+			<p>forever a draft -- <script language="Javascript">
+		document.write("This page was last modified on: " + document.lastModified +"");
+		</SCRIPT></p></marquee>
 			<br>
 			<br>
   		<h1>twenty fourteen</h1> 
@@ -92,7 +95,6 @@
 			oh fuck<br>
 			its really bad isn't it?<br>
 			yeah...<br>
-			
 			i'll try my best<br>
 			i'll try my best<br>
 			i'll try my very best<br>
