--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 		</SCRIPT></p></marquee>
 			<br>
 			<br>
-  		<h1>twenty fourteen</h1> 
+  		<h1>twenty fourteen</h1>
 		<p>
 			one time this guy asked me<br>
-			what's the first year you remember?<br> 
+			what's the first year you remember?<br>
 			and i was like there's<br>
 			a flourescent ball of blue light that predates memory<br>
 			it radiates and permeates and hesitates<br>
@@ -33,18 +33,19 @@
 			he said sure<br>
 			i need you to take my life<br>
 			and dye it mint green<br>
-			like Bethany Mota’s blood<br>
+			like bethany mota’s blood<br>
 			overly saccharine and soft<br>
 			cloying like cotton candy<br>
+			<!--This is a comment. Comments are not displayed in the browser-->
 			hey guys! <br>
 			welcome back to my channel<br>
 			today we’re going to be doing something a l i t t l e diff e re n t<br>
 			her voice fades into ukulele stock music<br>
 			does it stick to your hands or get caught in the riptide?<br>
-			lately i've been super duper lonely<br>
-			but aparently everyone else is lonely too so<br>
+			lately i've been lonely<br>
+			but aparently everyone else is too so<br>
 			that makes it fine?<br>
-			i heard if you<br>
+			i heard that before they kill cows they hug them<br>
 			fly me to the brilliant Azure Sky<br>
 			where two clouds hover<br>
 			indefinitely<br>
@@ -80,7 +81,7 @@
 			we're 13 in tysons corner<br>
 			this is back when b&bw was still across from the Annie's kiosk on the lower level<br>
 			before they relocated<br>
-			their old store felt bigger 
+			their old store felt bigger
 			im not sure if it actually was bigger<br>
 			I roam around for decades<br>
 			pacing, unscrewing bottles, and sniffing their contents<br>
@@ -88,16 +89,13 @@
 			and i wouldnt know which three were my favorite until i had sniffed<br>
 			every bottle in the store<br>
 			are you ready to check out?<br>
-			I'd never be ready<br>
+			i could never be ready<br>
 			I could spend eternity in that store<br>
 			oh wow<br>
 			oh no<br>
 			oh fuck<br>
 			its really bad isn't it?<br>
 			yeah...<br>
-			i'll try my best<br>
-			i'll try my best<br>
-			i'll try my very best<br>
 			the listerine scene <br>
 			squeeky clean
 			quarantine
@@ -156,7 +154,7 @@
 			to mute my begging<br>
 			hello?<br>
 			helooooo???<br>
-			when i die i'll think of 
+			when i die i'll think of
 			the cherry blossom lotion in kingston<br>
 			and the way it smelled<br>
 			it aged like a fine wine<br>
@@ -180,7 +178,6 @@
 			even if you unraveled every infinity scarf<br>
 			their yarn couldn’t span the cognitive distance<br>
 			between now and then<br>
-			i remember 
 			i remember learning to love not to remember<br>
 			when white converse turn red<br>
 			the aquamarine queen is dead<br>
@@ -228,7 +225,6 @@
 			fall through<br>
 			fall through<br>
 			fall through<br>
-			fall through<br>			
 			fall through<br>
 			fall through<br>
 			fall through<br>
@@ -383,7 +379,8 @@
 			fall through<br>
 			fall through<br>
 			fall through<br>
-			fall through<br>			
+			fall through<br>
+			fall through<br>
 			fall through<br>
 			fall through<br>
 			fall through<br>
