--- a/index.html
+++ b/index.html
@@ -59,11 +59,12 @@
 			okay?<br>
 			okay.<br>
 			im so tired all the time<br>
+			<!--The cheesecake factory-->
 			what ever happened to john green?<br>
 			what ever happened to mint green?<br>
 			it was never just a color<br>
-			it smybolized some abstract<br>
-			squeeky clean<br>
+			it smybolized something else<br>
+			new and squeeky clean<br>
 			Tiffany<br>
 			Quaranteen<br>
 			I've been a bad girl<br>
@@ -79,6 +80,82 @@
 			I stare back at my friend blankly<br>
 			she turns and enters the store<br>
 			we're 13 in tysons corner<br>
+			<regressing>
+			_  ___
+		  )) )L
+		 (( ((
+
+		   __
+		  /_`)
+		 (( (
+
+		  ___   __ ____  _ _    ___  ___  _  _  ___
+		  ))_) /_`) ))   )L`)   ))_) )) ) )\/,) ))_)
+		 ((__)(( ( ((   (( (   ((__)((_( ((`(( ((__)
+
+		  _ _ _  ___  _ _ ____    ___  ___  ___
+		  ))`)`) )L   )\`) ))     )) ) )L   )L
+		 ((,(,' ((_  ((`( ((     ((_( ((   ((
+
+		   __  _ _  __    _ _  ___  ___  ___  __ _ _
+		  /_`) )\`) ))\   )\`) )) ) ))_) )) ) ))\`\`)
+		 (( ( ((`( ((_/  ((`( ((_( ((__)((_( ((_/ ((
+
+		 ____  ___  ___  _      __    ___  _  ___
+		  ))   )) ) )) ) )L7   /_`)   ))_) )) ))
+		 ((   ((_( ((_( ((`\  (( (   ((   (( ((__
+
+		  __  _  __    _ ____    ___  _ _  ___  _ _
+		  ))\ )) ))\   )) ))     )L   ))`) )L   )\`)
+		 ((_/(( ((_/  (( ((     ((_  ((,' ((_  ((`(
+
+		  _ _   __  ___  ___  ___  _ _
+		  )L`) /_`) ))_) ))_) )L   )\`)
+		 (( ( (( ( ((   ((   ((_  ((`(
+
+
+		 8            o
+		 8            8
+.oPYo8 .oPYo.    o8P oPYo. .oPYo. .oPYo. .oPYo.
+8    8 8    8     8  8  `' 8oooo8 8oooo8 Yb..
+8    8 8    8     8  8     8.     8.       'Yb.
+`YooP' `YooP'     8  8     `Yooo' `Yooo' `YooP'
+:.....::.....:::::..:..:::::.....::.....::.....:::
+::::::::::::::::::::::::::::::::::::::::::::::::::
+::::::::::::::::::::::::::::::::::::::::::::::::::
+
+d'b        8 8
+8          8 8
+o8P  .oPYo. 8 8   .oPYo. odYo.
+8   .oooo8 8 8   8    8 8' `8
+8   8    8 8 8   8    8 8   8
+8   `YooP8 8 8   `YooP' 8   8
+:..:::.....:....:::.....:..::..
+:::::::::::::::::::::::::::::::
+:::::::::::::::::::::::::::::::
+
+		8                d'b
+		8                8
+.oPYo8 .oPYo. .oPYo. o8P    .oPYo. .oPYo. oPYo. .oPYo.
+8    8 8oooo8 .oooo8  8     8oooo8 .oooo8 8  `' Yb..
+8    8 8.     8    8  8     8.     8    8 8       'Yb.
+`YooP' `Yooo' `YooP8  8     `Yooo' `YooP8 8     `YooP'
+:.....::.....::.....::..:::::.....::.....:..:::::.....:
+:::::::::::::::::::::::::::::::::::::::::::::::::::::::
+:::::::::::::::::::::::::::::::::::::::::::::::::::::::
+
+.oPYo.
+``  `8
+.oP
+dP
+
+88
+::...::
+:::::::
+:::::::
+</regressing>
+
+
 			this is back when b&bw was still across from the Annie's kiosk on the lower level<br>
 			before they relocated<br>
 			their old store felt bigger
@@ -98,11 +175,24 @@
 			yeah...<br>
 			the listerine scene <br>
 			squeeky clean
-			quarantine
+			quarantine<br>
+			mall ratatouille<br>
 			Ebola <br>
 			happened in 2014,<br>
 			right?<br>
 			do you remember when things went viral<br>
+	<regressing>		_                                                 _
+(_)                                               | |
+____  ____ _  ____ ____   ____     ____  ____ ____ ____   _ | | ____
+/ _  |/ ___| |/ _  |  _ \ / _  |   / _  |/ ___/ _  |  _ \ / || |/ _  )
+( ( | | |   | ( ( | | | | ( ( | |  ( ( | | |  ( ( | | | | ( (_| ( (/ /
+___|_|_|  _|_|\__|_|_| |_|\_||_|   \_|| |_|   __||_|_| |_|\____|\____)
+| (_)     | |   (_)                (_____|    | |                  _
+| |_  ____| |  _ _ ____   ____     ____     _ | | ___  ____  _   _| |_
+| | |/ ___| | / | |  _ \ / _  |   / _  |   / || |/ _ \|  _ \| | | |  _)
+| | ( (___| |< (| | | | ( ( | |  ( ( | |  ( (_| | |_| | | | | |_| | |__
+|_|_|\____|_| \_|_|_| |_|\_|| |   \_||_|   \____|\___/|_| |_|\____|\___)
+					 (_____|                                         </regressing>
 			before things were viral?<br>
 			when everyone knew about whatever thing it was that week<br>
 			the cycle churns even more rapidly but within little bubbles<br>
@@ -129,6 +219,268 @@
 			yeah, but we know the ball exists and we know<br>
 			at one point there was a reality outside of it<br>
 			he said<br>
+			<regressing>
+			',:'/¯/`:,
+/:/_/::::/';'
+/:'     '`:/::;‘
+;         ';:';‘
+|         'i::i
+';        ;'::i
+'i        'i::i'
+;       'i::;'
+';       i:/'
+';     ;/ °
+ ';   / °
+	`'´       °
+	 ‘
+ .:':'`:·          ,:´'`;' ‘
+/:::::::/`·,      /::::/;‘
+/:·*'`·:/:::::' , /·´'`;/::';'
+,'         `:;::::'`i    ';:::';
+;            '`;:::'i    'i::::i
+i               `;:';    'i:::i'
+i      ,          \|     '|:::i°
+|     ,'`,                i:;'' ‚
+'i    'i:::i',             ';/'
+'i     ;::/ \           ;/'
+\    'i/    '`·,      ,''
+'`~´         '`·–·'´'
+								‘
+			 _               °
+,·~:-·´::/:`:;_.-~^*/'^;
+/::::::_:/::::::::::::/:::'i
+/·~-·´     `:;_,:·-~^*'`^:;
+'i                            i/
+`·,                     ,.·´
+`;         ,-·~:^*'´/;
+';        ;-· ~·-;/:/'
+';       ,.,      ,'/
+;      ';:/`'*'*´
+';     ;/'
+\    /
+	`'´             '
+',:'/¯/`:,
+/:/_/::::/';'
+/:'     '`:/::;‘
+;         ';:';‘
+|         'i::i
+';        ;'::i
+'i        'i::i'
+;       'i::;'
+';       i:/'
+';     ;/ °
+ ';   / °
+	`'´       °
+	 ‘
+ .:':'`:·          ,:´'`;' ‘
+/:::::::/`·,      /::::/;‘
+/:·*'`·:/:::::' , /·´'`;/::';'
+,'         `:;::::'`i    ';:::';
+;            '`;:::'i    'i::::i
+i               `;:';    'i:::i'
+i      ,          \|     '|:::i°
+|     ,'`,                i:;'' ‚
+'i    'i:::i',             ';/'
+'i     ;::/ \           ;/'
+\    'i/    '`·,      ,''
+'`~´         '`·–·'´'
+								‘
+		 ,.-:~:-.
+	 /':::::::::'`,
+ /;:-·~·-:;':::',
+,'´          '`:;::`,
+/                `;::\
+,'                   '`,::;
+i'       ,';´'`;         '\:::', ‘
+,'        ;' /´:`';         ';:::'i‘
+;        ;/:;::;:';         ',:::;
+'i        '´        `'         'i::'/
+¦       '/`' *^~-·'´\         ';'/'‚
+'`., .·´              `·.,_,.·´  ‚
+
+ ,.-~·-.,__,.-::^·- .,'   ‘
+/:::::::::::::::::::::::::/'; '
+/;:·–– :;:::::_ ;: – .,/::;i'‘
+/´          ¯¯           ';::/
+,:                          ,:/
+';_,..–-.,_     _    _,.·´‘
+	 ,·´'    '`·;'i¯
+	 i         'i:i'       ’
+	 ';        ';:i'     ’
+		i        i:/'
+		 ;      i/    °
+			\   '/'
+				¯               °
+				,.-:~:'*:~-.°
+		.·´:::::::::::::::;
+	/::;:-·~^*^~-:;:/ °
+,.-/:´     .,       ;/
+/::';      ,'::`:~.-:´;
+/;:- ´        `'·–·;:'/' _
+/     ;:'`:.., __,.·'::/:::';
+;'      ';:::::::::::::::/;;::/
+¦         '`·-·:;::·-·'´   ';:/‘
+'\                         /'
+`·,                  ,·'  '
+'`~·- . , . -·'´
+
+									,:´'*:^-:´¯'`:·,         ‘
+								 '/::::/::::::::::;¯'`*:^:-.,  ‘
+								/·´'*^-·´¯'`^·,/::::::::::::'`:,
+								'`,             ¯'`*^·-:;::::::'\' ‘
+									'`·,                     '`·;:::i'‘
+										 '|       .,_             \:'/'
+										 'i       'i:::'`·,          i/' ‘
+										 'i       'i::/:,:          /'
+											;      ,'.^*'´     _,.·´‘
+											';     ;/ '`*^*'´¯
+											 \    /
+												'`^'´‘
+
+			,.-:^*:*:^:~,'
+	,:´:::::::::::::::/_‚
+ /::;:-·^*'*'^~-;:/::/`;   '
+/:´    ,. –.,_,.'´::/:::';' '
+,/    ,:´';         ;'´¯`,:::'i'
+' ,'     ';:::`,       ,:     ';::i‘
+;      ';:::/:`::^*:´;      i::';'‘
+i       `;/::::::::,·´      ';:/'‘
+';         '` *^*'´         .'/‘
+'\                         /
+`·,                ,-·´ '
+ '`*~·––·~^'´  '
+			'
+ ,.-~·-.,__,.-::^·- .,'   ‘
+/:::::::::::::::::::::::::/'; '
+/;:·–– :;:::::_ ;: – .,/::;i'‘
+/´          ¯¯           ';::/
+,:                          ,:/
+';_,..–-.,_     _    _,.·´‘
+	 ,·´'    '`·;'i¯
+	 i         'i:i'       ’
+	 ';        ';:i'     ’
+		i        i:/'
+		 ;      i/    °
+			\   '/'
+				¯               °
+				,.-:~:'*:~-.°
+		.·´:::::::::::::::;
+	/::;:-·~^*^~-:;:/ °
+,.-/:´     .,       ;/
+/::';      ,'::`:~.-:´;
+/;:- ´        `'·–·;:'/' _
+/     ;:'`:.., __,.·'::/:::';
+;'      ';:::::::::::::::/;;::/
+¦         '`·-·:;::·-·'´   ';:/‘
+'\                         /'
+`·,                  ,·'  '
+'`~·- . , . -·'´
+
+ .:':'`:·          ,:´'`;' ‘
+/:::::::/`·,      /::::/;‘
+/:·*'`·:/:::::' , /·´'`;/::';'
+,'         `:;::::'`i    ';:::';
+;            '`;:::'i    'i::::i
+i               `;:';    'i:::i'
+i      ,          \|     '|:::i°
+|     ,'`,                i:;'' ‚
+'i    'i:::i',             ';/'
+'i     ;::/ \           ;/'
+\    'i/    '`·,      ,''
+'`~´         '`·–·'´'
+								‘
+ ,.-~·-.,__,.-::^·- .,'   ‘
+/:::::::::::::::::::::::::/'; '
+/;:·–– :;:::::_ ;: – .,/::;i'‘
+/´          ¯¯           ';::/
+,:                          ,:/
+';_,..–-.,_     _    _,.·´‘
+	 ,·´'    '`·;'i¯
+	 i         'i:i'       ’
+	 ';        ';:i'     ’
+		i        i:/'
+		 ;      i/    °
+			\   '/'
+				¯               °
+',:'/¯/`:,
+/:/_/::::/';'
+/:'     '`:/::;‘
+;         ';:';‘
+|         'i::i
+';        ;'::i
+'i        'i::i'
+;       'i::;'
+';       i:/'
+';     ;/ °
+ ';   / °
+	`'´       °
+	 ‘
+		 ,.-:~:-.
+	 /':::::::::'`,
+ /;:-·~·-:;':::',
+,'´          '`:;::`,
+/                `;::\
+,'                   '`,::;
+i'       ,';´'`;         '\:::', ‘
+,'        ;' /´:`';         ';:::'i‘
+;        ;/:;::;:';         ',:::;
+'i        '´        `'         'i::'/
+¦       '/`' *^~-·'´\         ';'/'‚
+'`., .·´              `·.,_,.·´  ‚
+
+___
+.:´/::::;'`;     ‘
+/::/::::/:::/'i
+/·´¯¯¯'`;/::'i'       ‚
+i          'i::'¦
+';          ¦::;
+;         ;::;  °
+';        ;:,'_ ,.-·~^; °
+';      ';:/:::::::::/::i'
+,:      '/::;:-·~^';::'/'
+i´        ¯          'i/ '
+'`·,_          _ , ·'´‘
+¯ `'*'´ ¯     '
+',:'/¯/`:,
+/:/_/::::/';'
+/:'     '`:/::;‘
+;         ';:';‘
+|         'i::i
+';        ;'::i
+'i        'i::i'
+;       'i::;'
+';       i:/'
+';     ;/ °
+ ';   / °
+	`'´       °
+	 ‘
+ ,.-~·-.,__,.-::^·- .,'   ‘
+/:::::::::::::::::::::::::/'; '
+/;:·–– :;:::::_ ;: – .,/::;i'‘
+/´          ¯¯           ';::/
+,:                          ,:/
+';_,..–-.,_     _    _,.·´‘
+	 ,·´'    '`·;'i¯
+	 i         'i:i'       ’
+	 ';        ';:i'     ’
+		i        i:/'
+		 ;      i/    °
+			\   '/'
+				¯               °
+										 _   ‘
+.·:¯:`/';            /::/'; ‘
+/:::::/:::\          /::/: ';
+/·´¯'`·;::::\      ,·´¯'`;::/
+;         \:::/`:, .'      ';/'
+';          \/::::,'    '   /
+\          `'·:,:'´      /'
+'`,                  ,'´'
+`,             ,'´:'*:^;
+ `;         ,/::::::::/'
+,·'         '¯ '`*^;:/‘
+';                 ,'/'
+'`*^~·–-·~^*'´‘         </regressing>
+
 			the ones who came after us exist entirely within it<br>
 			for us it was more of a voluntary descent<br>
 			or i don't know about voluntary, but we had more agency in the matter<br>
@@ -139,13 +491,14 @@
 			they didn't<br>
 			they got here<br>
 			and it already was this way<br>
+			Does that make sense?<br>
 			Does that make us responsible?<br>
 			responsible for what? i asked<br>
 			for telling them about the big blue ball insisde their bains?<br>
 			whenever i think about bath and body works<br>
-			i think about a bottle of cherry blossom lotion<br>
+			i think about the bottle of cherry blossom lotion<br>
 			that's sat a dresser in an attic in kingston new york<br>
-			for over 30 years<br>
+			for three decades<br>
 			yeah we're definetely responsible<br>
 			asphyxiate me<br>
 			with rainbow choker necklaces<br>
