--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
 			lately i've been lonely<br>
 			but aparently everyone else is too so<br>
 			that makes it fine?<br>
-			i heard that before they kill cows they hug them<br>
+			i guess <br>
 			fly me to the brilliant Azure Sky<br>
 			where two clouds hover<br>
 			indefinitely<br>
 			i never actually read <br>
 			The Fault In Our Stars to completion<br>
-			but its cover art alone<br>
+			but the cover art alone<br>
 			launched me into a terminal dream of An<br>
 			sel Elgort<br>
 			nsterdam and prepubescent<br>
@@ -64,9 +64,13 @@
 			what ever happened to mint green?<br>
 			it was never just a color<br>
 			it smybolized something else<br>
-			new and squeeky clean<br>
+			entirely abstract<br>
+			something new and artificial<br>
+			some mint green<br>
+			squeeky clean<br>
 			Tiffany<br>
-			Quaranteen<br>
+			ideal <br>
+			Whats up Quaranteens?!<br>
 			I've been a bad girl<br>
 			why don't you wash my mouth out<br>
 			with Bath and Body Works soap<br>
@@ -75,10 +79,9 @@
 			we can use the<br>
 			BUY THREE <br>
 			GET THREE <br>
-			free <br>
-			deal <br>
-			I stare back at my friend blankly<br>
-			she turns and enters the store<br>
+			FREE DEAL<br>
+			I stare back blankly<br>
+			she turns around and disapeers into the store<br>
 			we're 13 in tysons corner<br>
 			<regressing>
 			_  ___
@@ -156,26 +159,28 @@ dP
 </regressing>
 
 
-			this is back when b&bw was still across from the Annie's kiosk on the lower level<br>
+	    back when b&bw was still across from the Annie's kiosk on the lower level<br>
 			before they relocated<br>
-			their old store felt bigger
-			im not sure if it actually was bigger<br>
+			their old store felt bigger<br>
+			im not sure if it was bigger<br>
 			I roam around for decades<br>
 			pacing, unscrewing bottles, and sniffing their contents<br>
 			I had to find the three products <br>
 			and i wouldnt know which three were my favorite until i had sniffed<br>
-			every bottle in the store<br>
+			every single bottle in the store<br>
 			are you ready to check out?<br>
-			i could never be ready<br>
-			I could spend eternity in that store<br>
+			I could spend eternity in there<br>
+			and it would be heaven for my nose<br>
 			oh wow<br>
 			oh no<br>
 			oh fuck<br>
 			its really bad isn't it?<br>
 			yeah...<br>
-			the listerine scene <br>
-			squeeky clean
+			listen, things have gotten worse<br>
+			on the listerine scene <br>
+			squeeky clean<br>
 			quarantine<br>
+			eat up<br>
 			mall ratatouille<br>
 			Ebola <br>
 			happened in 2014,<br>
@@ -214,7 +219,9 @@ ___|_|_|  _|_|\__|_|_| |_|\_||_|   \_|| |_|   __||_|_| |_|\____|\____)
 			don’t you remember Malalala’s speech?<br>
 			don't you remember when things went flat?<br>
 			you know its scary to think he said<br>
-			that we're the youngest who remember a time before the Big Blue Ball enveloped everything<br>
+			that we're the youngest people who remember <br>
+			a time before <br>
+			the Big Blue Ball enveloped everything<br>
 			but we don't remember! i said that's my whole point!<br>
 			yeah, but we know the ball exists and we know<br>
 			at one point there was a reality outside of it<br>
@@ -487,30 +494,33 @@ i´        ¯          'i/ '
 			of setting boundries in our relationships with technology given that<br>
 			we saw with our own eyes the proliferation of smartphones<br>
 			and tablets and like the rise of social media that<br>
-			happened in middle school we saw it happen when we were sentient beings<br>
-			they didn't<br>
-			they got here<br>
+			happened in middle school for us <br>
+			it happened when we were sentient<br>
+			they didn't see it happen<br>
+			they just got here<br>
 			and it already was this way<br>
 			Does that make sense?<br>
 			Does that make us responsible?<br>
 			responsible for what? i asked<br>
 			for telling them about the big blue ball insisde their bains?<br>
 			whenever i think about bath and body works<br>
-			i think about the bottle of cherry blossom lotion<br>
-			that's sat a dresser in an attic in kingston new york<br>
+			i think about a bottle of cherry blossom lotion<br>
+			that has sat on a dresser <br>
+			in an attic <br>
+			in kingston new york<br>
 			for three decades<br>
 			yeah we're definetely responsible<br>
 			asphyxiate me<br>
-			with rainbow choker necklaces<br>
+			with rainbow chokers made of lace<br>
 			when i gasp for air<br>
-			put those pods in your ears<br>
-			to mute my begging<br>
+		  mute my begging<br>
 			hello?<br>
 			helooooo???<br>
-			when i die i'll think of
-			the cherry blossom lotion in kingston<br>
-			and the way it smelled<br>
-			it aged like a fine wine<br>
+			i'll spend my last breath fixated on<br>
+			the cherry blossom lotion in the attic<br>
+			and the way it rot<br>
+			so elegantely<br>
+			like a fine wine<br>
 			trample me<br>
 			with white converse<br>
 			the big blue ball in our brains<br>
@@ -523,7 +533,7 @@ i´        ¯          'i/ '
 			but it burns<br>
 			tears well upon sight<br>
 			its just so bright<br>
-			and light<br>
+			light<br>
 			and #FFFervescent<br>
 			so, to answer your original question<br>
 			the first year I remember is mint green twenty fourteen<br>
@@ -532,19 +542,26 @@ i´        ¯          'i/ '
 			their yarn couldn’t span the cognitive distance<br>
 			between now and then<br>
 			i remember learning to love not to remember<br>
+			i remember downing in a sea of infinate potentiality<br>
+			and waking up in a bathtub of blue light<br>
+			reborn in a virtual reality<br>
+			where gravity and consequences don't exist<br>
+			where im as light as a feather<br>
+			and a feather is as light as me<br>
 			when white converse turn red<br>
 			the aquamarine queen is dead<br>
 			her rain is over<br>
 			slain bloodstain and sober<br>
+			the rot rots<br>
 			stop saying<br>
 			i want to dye<br>
 			it mint green <br>
 			i want to be<br>
-			so goddamn<br>
-			ce rul ean<br>
+			s o go ddam n<br>
+			ce rul e an<br>
 			it burns if you stare too long<br>
-			seafoam froths forth from <br>
-			lips with delight<br>
+			seafoam froths forth from<br>
+			my lips with delight<br>
 			when the sky gapes open<br>
 			fall through<br>
 			fall through<br>
