--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
 			squeeky clean<br>
 			Tiffany<br>
 			ideal <br>
+			it's like one day they just decided to manufacture every product<br>
+			in this one color<br>
+			and so it became universal<br>
 			Whats up Quaranteens?!<br>
 			I've been a bad girl<br>
 			why don't you wash my mouth out<br>
@@ -81,6 +84,7 @@
 			GET THREE <br>
 			FREE DEAL<br>
 			I stare back blankly<br>
+			<!--Try to use the words flotsum and jetsum in here-->
 			she turns around and disapeers into the store<br>
 			we're 13 in tysons corner<br>
 			<regressing>
@@ -159,7 +163,9 @@ dP
 </regressing>
 
 
-	    back when b&bw was still across from the Annie's kiosk on the lower level<br>
+	    this is back when <br>
+			b&bw was across from the annie's pretzel kiosk <br>
+			on the first floor<br>
 			before they relocated<br>
 			their old store felt bigger<br>
 			im not sure if it was bigger<br>
@@ -182,6 +188,8 @@ dP
 			quarantine<br>
 			eat up<br>
 			mall ratatouille<br>
+			grazing<br>
+			eos lipbalm<br>
 			Ebola <br>
 			happened in 2014,<br>
 			right?<br>
@@ -521,9 +529,10 @@ i´        ¯          'i/ '
 			and the way it rot<br>
 			so elegantely<br>
 			like a fine wine<br>
+			or something<br>
 			trample me<br>
 			with white converse<br>
-			the big blue ball in our brains<br>
+			the big blue ball inside our brains<br>
 			it's just so<br>
 			big beautiful and bright<br>
 			inflated with infinite possibilities<br>
@@ -552,7 +561,7 @@ i´        ¯          'i/ '
 			the aquamarine queen is dead<br>
 			her rain is over<br>
 			slain bloodstain and sober<br>
-			the rot rots<br>
+			time for a new royal authority<br>
 			stop saying<br>
 			i want to dye<br>
 			it mint green <br>
