--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@ dP
 			oh wow<br>
 			oh no<br>
 			oh fuck<br>
+			carnal
 			its really bad isn't it?<br>
 			yeah...<br>
 			listen, things have gotten worse<br>
@@ -521,6 +522,7 @@ i´        ¯          'i/ '
 			asphyxiate me<br>
 			with rainbow chokers made of lace<br>
 			when i gasp for air<br>
+			open space office 13 teen year old wanting to be a millenial
 		  mute my begging<br>
 			hello?<br>
 			helooooo???<br>
@@ -537,6 +539,7 @@ i´        ¯          'i/ '
 			big beautiful and bright<br>
 			inflated with infinite possibilities<br>
 			i want to touch it<br>
+			why i left buzzfeed videos
 			i want to squeeze it<br>
 			i reach out<br>
 			but it burns<br>
