wow. a lot of edits have been made

--- a/index.html
+++ b/index.html
@@ -36,16 +36,19 @@
 			like bethany mota’s blood<br>
 			overly saccharine and soft<br>
 			cloying like cotton candy<br>
-			<!--This is a comment. Comments are not displayed in the browser-->
+			<!--donut repeat yourself-->
 			hey guys! <br>
 			welcome back to my channel<br>
 			today we’re going to be doing something a l i t t l e diff e re n t<br>
-			her voice fades into ukulele stock music<br>
+			her voice fades in to ukulele stock music<br>
 			does it stick to your hands or get caught in the riptide?<br>
 			lately i've been lonely<br>
 			but aparently everyone else is too so<br>
-			that makes it fine?<br>
-			i guess <br>
+			that makes it fine i guess<br>
+			ed that by now we would have figured more of this stuff
+			out but we really haven't it seems to have only
+			gotten worse<br>
+			lol<br>
 			fly me to the brilliant Azure Sky<br>
 			where two clouds hover<br>
 			indefinitely<br>
@@ -72,21 +75,24 @@
 			ideal <br>
 			it's like one day they just decided to manufacture every product<br>
 			in this one color<br>
+			that of course existed before<br>
+			but now it was everywhere<br>
 			and so it became universal<br>
 			Whats up Quaranteens?!<br>
 			I've been a bad girl<br>
-			why don't you wash my mouth out<br>
+			wash my mouth out<br>
 			with Bath and Body Works soap<br>
 			Here, if you buy three <br>
 			and I buy three <br>
 			we can use the<br>
-			BUY THREE <br>
-			GET THREE <br>
-			FREE DEAL<br>
-			I stare back blankly<br>
+			buy three <br>
+			get three <br>
+			free deal<br>
+			I stare back in blank giddy<br>
 			<!--Try to use the words flotsum and jetsum in here-->
-			she turns around and disapeers into the store<br>
-			we're 13 in tysons corner<br>
+			she turns and disapeers into the store<br>
+			we're 12 in tysons corner<br>
+			one of the last thriving malls<br>
 			<regressing>
 			_  ___
 		  )) )L
@@ -168,26 +174,28 @@ dP
 			on the first floor<br>
 			before they relocated<br>
 			their old store felt bigger<br>
-			im not sure if it was bigger<br>
-			I roam around for decades<br>
+			since i would roam around there for decades<br>
 			pacing, unscrewing bottles, and sniffing their contents<br>
 			I had to find the three products <br>
 			and i wouldnt know which three were my favorite until i had sniffed<br>
 			every single bottle in the store<br>
 			are you ready to check out?<br>
-			I could spend eternity in there<br>
+			never<br>
 			and it would be heaven for my nose<br>
 			oh wow<br>
 			oh no<br>
+			<!--This is a comment. I literally wanted to be a millenial so bad why did i want to be a millenial? so badly and to participate in the 90s kid nostalgia i had no actual memory of-->
 			oh fuck<br>
-			carnal
+			carnal chainsmoking<br>
 			its really bad isn't it?<br>
 			yeah...<br>
 			listen, things have gotten worse<br>
+			<!--This is a comment. Comments are not displayed in the browser-->
+			<!--This is a comment. Comments are not displayed in the browser-->
 			on the listerine scene <br>
 			squeeky clean<br>
 			quarantine<br>
-			eat up<br>
+			chewing<br>
 			mall ratatouille<br>
 			grazing<br>
 			eos lipbalm<br>
@@ -209,12 +217,17 @@ ___|_|_|  _|_|\__|_|_| |_|\_||_|   \_|| |_|   __||_|_| |_|\____|\____)
 					 (_____|                                         </regressing>
 			before things were viral?<br>
 			when everyone knew about whatever thing it was that week<br>
-			the cycle churns even more rapidly but within little bubbles<br>
+			now the cycle churns even just if not more rapidly <br>
+			but within little bubbles<br>
 			numbers don't impress me<br>
+			views don't impress me<br>
+			exposure don't impress me<br>
 			do you remember when every youtuber was still on vine?<br>
-			are you on tumblr?<br>
+			when ariana grande licked that donut and it caused a big stir<br>
+			it's weird how irrelevent yet interesting this stuff is<br>
+			aren't you on tumblr?<br>
 			start designing your blog<br>
-			and learn to code by accident!<br>
+			you'll learn to code by accident!<br>
 			YOU<br>
 			yes, you!!! <br>
 			You need <br>
@@ -539,7 +552,7 @@ i´        ¯          'i/ '
 			big beautiful and bright<br>
 			inflated with infinite possibilities<br>
 			i want to touch it<br>
-			why i left buzzfeed videos
+			This is Why I Left Buzzfeed<br>
 			i want to squeeze it<br>
 			i reach out<br>
 			but it burns<br>
@@ -547,6 +560,7 @@ i´        ¯          'i/ '
 			its just so bright<br>
 			light<br>
 			and #FFFervescent<br>
+			at your local abandoned mall<br>
 			so, to answer your original question<br>
 			the first year I remember is mint green twenty fourteen<br>
 			i remember a time and a place so far away,<br>
@@ -588,6 +602,62 @@ i´        ¯          'i/ '
 			fall through<br>
 			fall through<br>
 			why don't you just?<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
+			fall through<br>
 			fall through<br>
 			fall through<br>
 			fall through<br>
